tests/src/main/java/org/hibernate/beanvalidation/tck/tests/constraints/validatorresolution/SubClassA.java
/**
 * Jakarta Bean Validation TCK
 *
 * License: Apache License, Version 2.0
 * See the license.txt file in the root directory or <http://www.apache.org/licenses/LICENSE-2.0>.
 */
package org.hibernate.beanvalidation.tck.tests.constraints.validatorresolution;

/**
 * @author Hardy Ferentschik
 */
public class SubClassA extends BaseClass {
}
